jsonapi_core/tests/compile_fail/tuple_struct.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "things")]
struct Thing(String, String);

fn main() {}
