jsonapi_core/tests/compile_fail/tuple_struct.stderr
error: #[derive(JsonApi)] only supports structs with named fields
 --> tests/compile_fail/tuple_struct.rs:5:8
  |
5 | struct Thing(String, String);
  |        ^^^^^
